--- a/order.html
+++ b/order.html
@@ -24,8 +24,8 @@
 
 function saveTextAsFile()
 {
-	var textToSave = document.getElementById("inputTextToSave").value;
-	var textToSaveAsBlob = new Blob([textToSave], {type:"text/plain"});
+	'var textToSave = document.getElementById("inputTextToSave").value;
+	'var textToSaveAsBlob = new Blob([textToSave], {type:"text/plain"});
 	var textToSaveAsURL = window.URL.createObjectURL(textToSaveAsBlob);
 	var fileNameToSaveAs = document.getElementById("inputFileNameToSaveAs").value;
 
