--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
-          <h1 class="logo"><img src="ll.jpg"><a href="index.html">V-Mac</a></h1>
+          <h1 class="logo"><a href="index.html">V-Mac</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -104,7 +104,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
+                <h2 class="animate__animated animate__fadeInDown">Trustworthy and Reasonable</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -114,7 +114,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Temporibus autem quibusdam</h2>
+                <h2 class="animate__animated animate__fadeInDown">Quicker and Timely Service.</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -124,7 +124,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/4.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Nam libero tempore</h2>
+                <h2 class="animate__animated animate__fadeInDown">Mutual Public Relations.</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -134,7 +134,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
+                <h2 class="animate__animated animate__fadeInDown">Best Solution of Every Expectaion.</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
