--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Quicker and Timely Service.</h2>
+                <h2 class="animate__animated animate__fadeInDown">Quicker and Timely Service</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -124,7 +124,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/4.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Mutual Public Relations.</h2>
+                <h2 class="animate__animated animate__fadeInDown">Mutual Public Relations</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -134,7 +134,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Best Solution of Every Expectaion.</h2>
+                <h2 class="animate__animated animate__fadeInDown">Best Solution of Every Expectaion</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
