--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Best Solution of Every Expectaion</h2>
+                <h2 class="animate__animated animate__fadeInDown">Best Solution of Every Expectation</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -164,13 +164,13 @@
 
           <div class="col-lg-4 box">
             <i class="bi bi-briefcase"></i>
-            <h4 class="title"><a href="">Lorem Ipsum Delino</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">We Deals</a></h4>
+            <p class="description">Servers, Personal Computers, Printers, Netwrok Accessories and Peripherals.</p>
           </div>
 
           <div class="col-lg-4 box box-bg">
             <i class="bi bi-card-checklist"></i>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <h4 class="title"><a href="">Shop Now</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
 
