--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
               <li><a class="nav-link  " href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
+                  <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeblfi8cw7ZNmUC2kvPTFUSyz4iswD6pM-7twdp4DoBk3wWbA/viewform?vc=0&c=0&w=1&flr=0">Drop Down 1</a></li>
                   <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeblfi8cw7ZNmUC2kvPTFUSyz4iswD6pM-7twdp4DoBk3wWbA/viewform?vc=0&c=0&w=1&flr=0">Deep Drop Down 1</a></li>
+                      <li><a href="#">Deep Drop Down 1</a></li>
                       <li><a href="#">Deep Drop Down 2</a></li>
                       <li><a href="#">Deep Drop Down 3</a></li>
                       <li><a href="#">Deep Drop Down 4</a></li>
