--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
                       <li><a href="https://docs.google.com/spreadsheets/d/1-2pzIelBK0w8bEAm3XMmyC3zK9fkhlsrONJ2Rqxb9nQ/edit" target="_blank">Deep Drop Down 1</a></li>
-                      <li><a href="dailylogs.html">Daily Logsheet</a></li>
+                      <li><a href="dailylog.html">Daily Logsheet</a></li>
                       <li><a href="#">Deep Drop Down 3</a></li>
                       <li><a href="#">Deep Drop Down 4</a></li>
                       <li><a href="#">Deep Drop Down 5</a></li>
