--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
+                <h2 class="animate__animated animate__fadeInDown">We are professionals</h2>
                 <p class="animate__animated animate__fadeInUp"></p>
                 <a href="order.html" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
