--- a/index.html
+++ b/index.html
@@ -171,13 +171,15 @@
           <div class="col-lg-4 box box-bg">
             <i class="bi bi-card-checklist"></i>
             <h4 class="title"><a href="">Shop Now</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <p class="description">Discover the latest computers, smartphones, gadgets, and accessories—all in one place! Whether you’re looking for powerful laptops, high-performance desktops, smart electronics, or essential tech accessories, we’ve got everything you need to stay ahead in the digital world.</p>
           </div>
 
           <div class="col-lg-4 box">
             <i class="bi bi-binoculars"></i>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">You May Find Us</a></h4>
+            <p class="description">You may find us at our store, where we offer a wide range of quality computers, electronics, and accessories to meet all your tech needs. Our team is always ready to assist you with expert guidance, great deals, and reliable service.
+
+<br><$nbsp>Visit us to explore the latest technology, compare products, and get the best solutions for your home or business.</p>
           </div>
 
         </div>
@@ -888,3 +890,4 @@
 </body>
 
 </html>
+
