--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h4 class="title"><a href="">You May Find Us</a></h4>
             <p class="description">You may find us at our store, where we offer a wide range of quality computers, electronics, and accessories to meet all your tech needs. Our team is always ready to assist you with expert guidance, great deals, and reliable service.
 
-<br><$nbsp>Visit us to explore the latest technology, compare products, and get the best solutions for your home or business.</p>
+<br>Visit us to explore the latest technology, compare products, and get the best solutions for your home or business.</p>
           </div>
 
         </div>
@@ -890,4 +890,5 @@
 </body>
 
 </html>
+
 
