--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-lg-4 box">
             <i class="bi bi-briefcase"></i>
             <h4 class="title"><a href="">We Deals</a></h4>
-            <p class="description">Servers, Personal Computers, Printers, Netwrok Accessories and Peripherals.</p>
+            <p class="description">We supplies a wide range of high-quality IT, electronics, and office technology products designed to meet the needs of individuals, businesses, and institutions. Like servers, Personal Computers, Printers, Netwrok Accessories and Peripherals.</p>
           </div>
 
           <div class="col-lg-4 box box-bg">
@@ -190,7 +190,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3 class="section-title">Our Portfolio</h3>
+          <h3 class="section-title">Poroducts</h3>
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100"">
@@ -215,7 +215,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">App 1</a></h4>
+              <h4><a href="portfolio-details.html">Personal Computers</a></h4>
               <p>App</p>
             </div>
           </div>
@@ -230,7 +230,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Web 3</a></h4>
+              <h4><a href="portfolio-details.html">Printers/a></h4>
               <p>Web</p>
             </div>
           </div>
@@ -245,7 +245,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">App 2</a></h4>
+              <h4><a href="portfolio-details.html">Routers & Switches</a></h4>
               <p>App</p>
             </div>
           </div>
@@ -260,7 +260,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Card 2</a></h4>
+              <h4><a href="portfolio-details.html">Servers</a></h4>
               <p>Card</p>
             </div>
           </div>
@@ -275,7 +275,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Web 2</a></h4>
+              <h4><a href="portfolio-details.html">CCTV Cameras</a></h4>
               <p>Web</p>
             </div>
           </div>
@@ -290,7 +290,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">App 3</a></h4>
+              <h4><a href="portfolio-details.html">AC and TV</a></h4>
               <p>App</p>
             </div>
           </div>
@@ -305,7 +305,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Card 1</a></h4>
+              <h4><a href="portfolio-details.html">IUPS, Invertor and Battaries</a></h4>
               <p>Card</p>
             </div>
           </div>
@@ -320,7 +320,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Card 3</a></h4>
+              <h4><a href="portfolio-details.html">Wires and Cables</a></h4>
               <p>Card</p>
             </div>
           </div>
@@ -335,7 +335,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Web 1</a></h4>
+              <h4><a href="portfolio-details.html">Softwares</a></h4>
               <p>Web</p>
             </div>
           </div>
@@ -753,6 +753,7 @@
 </body>
 
 </html>
+
 
 
 
