--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
       <div class=" col-lg-12">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-app">Hardwares</li>
+            <li data-filter=".filter-card">Networking</li>
+            <li data-filter=".filter-web">Software</li>
           </ul>
         </div>
       </div>
@@ -245,7 +245,7 @@
 
             <div class="portfolio-info">
               <h4><a href="portfolio-details.html">Routers & Switches</a></h4>
-              <p>App</p>
+            
             </div>
           </div>
         </div>
@@ -320,7 +320,7 @@
 
             <div class="portfolio-info">
               <h4><a href="portfolio-details.html">Wires and Cables</a></h4>
-              <p>Card</p>
+          
             </div>
           </div>
         </div>
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
