--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <figure>
-              <img src="assets/img/portfolio/card1.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/card1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 1"><i class="bi bi-plus"></i></a>
+              <img src="assets/img/portfolio/img7.jpg" class="img-fluid" alt="">
+              <a href="assets/img/portfolio/img7.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 1"><i class="bi bi-plus"></i></a>
               <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">IUPS, Invertor and Battaries</a></h4>
+              <h4><a href="portfolio-details.html">Online UPS, Invertor and Battaries</a></h4>
             
             </div>
           </div>
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
