--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Online UPS, Invertor and Batteries</a></h4>
+              <h4><a href="portfolio-details.html">UPS,Invertor & Batteries</a></h4>
             
             </div>
           </div>
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
