--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       </div>
     </section><!-- End Our Clients Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section ======= 
     <section id="testimonials" class="section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
