--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
               <img src="assets/img/cio.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Bachana Angdembe</h4>
+                  <h4>Bachan Angdembe</h4>
                   <span>Chief Investment Officer</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
@@ -752,6 +752,7 @@
 </body>
 
 </html>
+
 
 
 
