--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
+          <div class="logo"><img src="assets/img/logo.png"></div>
           <h1 class="logo"><a href="index.html">V-Mac</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -752,6 +753,7 @@
 </body>
 
 </html>
+
 
 
 
