--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -43,8 +43,8 @@
 
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
-          <div class="logo"><img src="assets/img/logo.png"></div>
-          <h1 class="logo"><a href="index.html">V-Mac</a></h1>
+         
+          <h1 class="logo"><img src="assets/img/logo.png"><a href="index.html">V-Mac</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -753,6 +753,7 @@
 </body>
 
 </html>
+
 
 
 
