--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
-
+   <section id="contact">  
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
@@ -694,6 +694,7 @@
               <strong>Phone:</strong> +977 23 571638<br>
               <strong>Email:</strong> vmacacc@gmail.com<br>
             </p>
+   </section>
 
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -753,6 +754,7 @@
 </body>
 
 </html>
+
 
 
 
