--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
           <div class="portfolio-wrap">
             <figure>
               <img src="assets/img/portfolio/img1.jpg" class="img-fluid" alt="">
-              <a href="assets/img/portfolio/img1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <!--<a href="assets/img/portfolio/img1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>-->
+              <a href="pcs.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Personal Computers</a></h4>
+              <h4><a href="pcs.html">Personal Computers</a></h4>
             </div>
           </div>
         </div>
@@ -756,6 +756,7 @@
 </body>
 
 </html>
+
 
 
 
