--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <figure>
               <img src="assets/img/portfolio/img1.jpg" class="img-fluid" alt="">
               <!--<a href="assets/img/portfolio/img1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>-->
-              <a href="pcs.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="pcs.html" class="link-details" title="See All Product Details to Purchase."><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -756,6 +756,7 @@
 </body>
 
 </html>
+
 
 
 
