--- a/pcs.html
+++ b/pcs.html
@@ -58,7 +58,7 @@
 
 <script>
   const products = [
-    {id:1, name:"Dell OptiPlex Desktop (2025)", price:Rs 18500/-,img:"assets/img/optiplex-3000tc-gallery-3.avif, widht:100"},
+    {id:1, name:"Dell OptiPlex Desktop (2025)", price:Rs 18500/-,img:"assets/img/optiplex-3000tc-gallery-3.avif"},
     {id:2, name:"HP EliteBook Laptop", price:1200, img:"https://via.placeholder.com/300x200?text=HP+Laptop"},
     {id:3, name:"Apple MacBook Air M3", price:1500, img:"https://via.placeholder.com/300x200?text=MacBook+Air"},
     {id:4, name:"Lenovo ThinkCentre Desktop", price:900, img:"https://via.placeholder.com/300x200?text=Lenovo+Desktop"}
