--- a/pcs.html
+++ b/pcs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechStore – Order Desktops & Laptops</title>
+  <title>Order Desktops & Laptops</title>
   <style>
     body {font-family: Arial, sans-serif; margin:0; background:#f4f6f8;}
     header {background:#0d6efd; color:#fff; padding:20px; text-align:center;}
@@ -28,7 +28,6 @@
 <body>
 
 <header>
-  <h1>TechStore</h1>
   <p>New Model Branded Desktops & Laptops</p>
 </header>
 
@@ -58,7 +57,7 @@
 
 <script>
   const products = [
-    {id:1, name:"Dell OptiPlex Desktop (2025)", price:18500, img:"assets/img/optiplex-3000tc-gallery-3.avif"},
+    {id:1, name:"Dell OptiPlex Desktop (2025)", price:18500, img:"assets/img/optiplex-3000tc-gallery-3.avif"},{<p>sdf</p>},
     {id:2, name:"HP EliteBook Laptop", price:1200, img:"https://via.placeholder.com/300x200?text=HP+Laptop"},
     {id:3, name:"Apple MacBook Air M3", price:1500, img:"https://via.placeholder.com/300x200?text=MacBook+Air"},
     {id:4, name:"Lenovo ThinkCentre Desktop", price:900, img:"https://via.placeholder.com/300x200?text=Lenovo+Desktop"}
