--- a/pcs.html
+++ b/pcs.html
@@ -99,37 +99,37 @@
     	<img src="assets/img/desktop-tower-ect1250-c-no-ssd-black-gallery-1.avif" width="100px">
         <h3>Dell Tower Desktop</h3>
         <p>Price: $850</p>
-        <button onclick="addToCart('Keyboard C', 850)">Add to Cart</button>
+        <button onclick="addToCart('Dell Tower Desktop', 850)">Add to Cart</button>
     </div>
     <div class="product">
     	<img src="assets/img/desktop-tower-ebt2250-c-gray-gallery-1.avif" width="100px">
         <h3>Dell Tower Plus Desktop</h3>
         <p>Price: $1000</p>
-        <button onclick="addToCart('Keyboard C', 1000)">Add to Cart</button>
+        <button onclick="addToCart('Dell Tower Plus Desktop', 1000)">Add to Cart</button>
     </div>
     <div class="product">
     	<img src="assets/img/desktop-dell-pro-max-fcs1250-slim-odd-gallery-1.avif" width="100px">
         <h3>Dell Pro Max Slim Desktop</h3>
         <p>Price: $1100</p>
-        <button onclick="addToCart('Keyboard C', 1100)">Add to Cart</button>
+        <button onclick="addToCart('Dell Pro Max Slim Desktop', 1100)">Add to Cart</button>
     </div>
     <div class="product">
     	<img src="assets/img/desktop-dell-pro-max-fcm1253-micro-bk-gallery-1.avif" width="200px">
         <h3>Dell Pro Max With GB10 Desktop</h3>
         <p>Price: $4500</p>
-        <button onclick="addToCart('Keyboard C', 4500)">Add to Cart</button>
+        <button onclick="addToCart('Dell Pro Max With GB10 Desktop', 4500)">Add to Cart</button>
     </div>
     <div class="product">
     	<img src="assets/img/desktop-dell-pro-qbs1250-slim-plus-odd-gallery-1.avif" width="100px">
         <h3>Dell Pro Slim Plus Desktop</h3>
         <p>Price: $1100</p>
-        <button onclick="addToCart('Keyboard C', 1100)">Add to Cart</button>
+        <button onclick="addToCart('Dell Pro Slim Plus Desktop', 1100)">Add to Cart</button>
     </div>
     <div class="product">
     	<img src="assets/img/desktop-dell-pro-max-fcm2250-micro-bk-gallery-1.avif" width="100px">
         <h3>Dell Pro Max Micro Desktop</h3>
         <p>Price: $1100</p>
-        <button onclick="addToCart('Keyboard C', 1100)">Add to Cart</button>
+        <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
 
 </div>
