--- a/pcs.html
+++ b/pcs.html
@@ -50,6 +50,7 @@
     .products, .cart {
         display: flex;
         flex-wrap: wrap;
+        top: 100px;
         justify-content: center;
         margin: 0px;
     }
@@ -97,11 +98,6 @@
 /*==============------------
 
 </style>
-
-
-
-
-
 <body>
 
   <!-- ======= Header ======= -->
@@ -148,12 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-
-
-
-
-
-
+  
 <div class="products">
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
@@ -666,3 +657,4 @@
 </body>
 
 </html>
+
