--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
   
-<div class="products">
+<div class="products" style="margin-top:100px;">
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h3>Dell OptiPlex Desktop</h3>
@@ -657,5 +657,6 @@
 </body>
 
 </html>
+
 
 
