--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-  
+<div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:200px;">
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
@@ -200,9 +200,9 @@
         <p>Price: $1100</p>
         <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
-
+  
 </div>
-
+</div>
 <div class="cart">
 <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
 <div class="cart">
@@ -657,6 +657,7 @@
 </body>
 
 </html>
+
 
 
 
