--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 <div class="container" data-aos="fade-up">  
-<div class="products" style="margin-top:200px;">
+<div class="products">
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h3>Dell OptiPlex Desktop</h3>
@@ -657,6 +657,7 @@
 </body>
 
 </html>
+
 
 
 
