--- a/pcs.html
+++ b/pcs.html
@@ -115,7 +115,7 @@
               <li><a class="nav-link scrollto " href="index.html#home">Home</a></li>
               <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
               <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-              <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li>
+              <li><a class="nav-link scrollto " href="index.html#portfolio">Products</a></li>
               <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
               <li><a class="nav-link  active" href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
