--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
               <li><a class="nav-link scrollto " href="index.html#home">Home</a></li>
               <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
               <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-              <li><a class="nav-link scrollto " href="index.html#portfolio">Portfolio</a></li>
+              <li><a class="nav-link scrollto " href="index.html#portfolio">Products</a></li>
               <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
               <li><a class="nav-link  active" href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -410,3 +410,4 @@
 </body>
 
 </html>
+
