--- a/pcs.html
+++ b/pcs.html
@@ -144,6 +144,7 @@
 
     </div>
   </header><!-- End Header -->
+<table><td></td><td>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -203,16 +204,16 @@
   
 </div>
 </div>
+</td></table>
 <div class="cart">
 <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
 <div class="cart">
+
     <h2>Your Cart</h2>
 
     <div id="cart-items"></div>
     <p id="total-price">Total: $0</p>
 </div>
-
-
 <!------------------------------->
 <!-- Modal -->
 <div class="modal" id="orderModal">
@@ -567,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
