--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,15 @@
 
     </div>
   </header><!-- End Header -->
-<table><td></td><td>
+<table><td><div class="cart">
+<button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
+<div class="cart">
+
+    <h2>Your Cart</h2>
+
+    <div id="cart-items"></div>
+    <p id="total-price">Total: $0</p>
+</div></td><td>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -568,6 +576,7 @@
 </body>
 
 </html>
+
 
 
 
