--- a/pcs.html
+++ b/pcs.html
@@ -147,11 +147,11 @@
 <table><td><div class="cart">
 <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
 <div class="cart">
-
-    <h2>Your Cart</h2>
-<p id="total-price">Total: $0</p>
-    <div id="cart-items"></div>
-    
+  <table>
+   <td><h4>Your Cart</h4></td><tr>
+<td><p id="total-price">Total: $0</p></td><tr>
+    <td><div id="cart-items"></div></td>
+  </table>  
 </div></td><td>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
@@ -576,6 +576,7 @@
 </body>
 
 </html>
+
 
 
 
