--- a/pcs.html
+++ b/pcs.html
@@ -147,7 +147,7 @@
 <table><td><div class="cart">
 <table><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
 <div class="cart">
-<td><h4>Your Cart</h4></td><tr>
+<td><h4>Your Cart</h4></td>
 <td><p id="total-price">Total: $0</p></td><tr>
     <td><div id="cart-items"></div></td>
   </table>  
@@ -575,6 +575,7 @@
 </body>
 
 </html>
+
 
 
 
