--- a/pcs.html
+++ b/pcs.html
@@ -146,7 +146,7 @@
   </header><!-- End Header -->
 <table><td><div class="cart">
 <table><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
-<div class="cart">
+<div class="ca">
 <td><h4>Your Cart</h4></td>
 <td><p id="total-price">Total: $0</p></td><tr>
     <td><div id="cart-items"></div></td>
@@ -575,6 +575,7 @@
 </body>
 
 </html>
+
 
 
 
