--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-<table><td style="widht:400px;"><div class="cart">
+<table><td style="width:400px;"><div class="cart">
 <table><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
 <div class="cart">
 <td><h6>Your Cart</h6></td><tr>
@@ -575,6 +575,7 @@
 </body>
 
 </html>
+
 
 
 
