--- a/pcs.html
+++ b/pcs.html
@@ -144,14 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-<table><td style="width:300px;"><div class="cart">
-<table><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
-<div class="cart">
-<td><h6>Your Cart</h6></td><tr>
-<td><p id="total-price">Total: $0</p></td><tr>
-    <td><div id="cart-items"></div></td>
-  </table>  
-</div></td><td>
+<table>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -211,6 +204,12 @@
   
 </div>
 </div>
+</td><td style="width:300px;">
+      <table><td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
+      <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
+      <td><p id="total-price">Total: $0</p></td><tr>
+      <td><div id="cart-items"></div></td>
+      </table>  
 </td></table>
 <div class="cart">
 <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
@@ -575,6 +574,7 @@
 </body>
 
 </html>
+
 
 
 
