--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-<table>
+<table><td>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -201,16 +201,19 @@
         <p>Price: $1100</p>
         <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
-  
+  </div>
 </div>
-</div>
-</td><td style="width:300px;">
+</td>
+    <td style="width:300px;">
       <table><td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
       <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
       <td><p id="total-price">Total: $0</p></td><tr>
       <td><div id="cart-items"></div></td>
       </table>  
-</td></table>
+    </td>
+</table>
+
+  
 <div class="cart">
 <button onclick="openModal()" style="background:#f44336;">Place Order</button></div>
 <div class="cart">
@@ -574,6 +577,7 @@
 </body>
 
 </html>
+
 
 
 
