--- a/pcs.html
+++ b/pcs.html
@@ -204,13 +204,12 @@
   </div>
 </div>
 </td>
-    <td style="width:300px;">
-      <table><td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td><tr>
-      <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
-      <td><p id="total-price">Total: $0</p></td><tr>
-      <td><div id="cart-items"></div></td>
-      </table>  
-    </td>
+<td style="width:300px;">
+      <tr><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div><tr>
+      <tr><div class="cart"><h6>Your Cart</h6></div></tr>
+      <tr><p id="total-price">Total: $0</p></tr>
+      <tr><div id="cart-items"></div></tr>
+</td>
 </table>
 
   
