--- a/pcs.html
+++ b/pcs.html
@@ -205,10 +205,10 @@
 </div>
 </td>
 <td style="width:300px;">
-      <tr><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div><tr>
-      <tr><div class="cart"><h6>Your Cart</h6></div></tr>
-      <tr><p id="total-price">Total: $0</p></tr>
-      <tr><div id="cart-items"></div></tr>
+      <div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div><tr>
+      <div class="cart"><h6>Your Cart</h6></div><tr>
+      <p id="total-price">Total: $0</p><tr>
+      <div id="cart-items"></div><tr>
 </td>
 </table>
 
@@ -576,6 +576,7 @@
 </body>
 
 </html>
+
 
 
 
