--- a/pcs.html
+++ b/pcs.html
@@ -205,10 +205,12 @@
 </div>
 </td>
 <td style="width:300px;">
-      <div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div><tr>
-      <div class="cart"><h6>Your Cart</h6></div><tr>
-      <p id="total-price">Total: $0</p><tr>
-      <div id="cart-items"></div><tr>
+  <table>
+      <td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
+      <td><div class="cart"><h6>Your Cart</h6></div></td>><tr>
+      <td><p id="total-price">Total: $0</p><tr></td><tr>
+      <td><div id="cart-items"></div></td><tr>
+  </table>
 </td>
 </table>
 
@@ -576,6 +578,7 @@
 </body>
 
 </html>
+
 
 
 
