--- a/pcs.html
+++ b/pcs.html
@@ -208,7 +208,7 @@
   <table>
       <td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
       <td><div class="cart"><h6>Your Cart</h6></div></td>><tr>
-      <td><p id="total-price">Total: $0</p><tr></td><tr>
+      <td><div class="cart"><p id="total-price">Total: $0</p></div></td><tr>
       <td><div id="cart-items"></div></td><tr>
   </table>
 </td>
@@ -578,6 +578,7 @@
 </body>
 
 </html>
+
 
 
 
