--- a/pcs.html
+++ b/pcs.html
@@ -207,7 +207,7 @@
 <td style="width:300px;">
   <table>
       <td><div class="cart"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
-      <td><div class="cart"><h6>Your Cart</h6></div></td>><tr>
+      <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
       <td><div class="cart"><p id="total-price">Total: $0</p></div></td><tr>
       <td><div id="cart-items"></div></td><tr>
   </table>
@@ -578,6 +578,7 @@
 </body>
 
 </html>
+
 
 
 
