--- a/pcs.html
+++ b/pcs.html
@@ -209,7 +209,7 @@
       <td><div <button onclick="openModal()" style="background:#f44336;">Place Order</button></td></tr>
       <td><div <h6>Your Cart</h6></td><tr>
       <td><div <p id="total-price">Total: $0</p></td><tr>
-     <!-- <td><div id="cart-items"></div></td><tr> -->
+      <td><div id="cart-items"></div></td><tr>
   </table>
 </td>
 </table>
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
