--- a/pcs.html
+++ b/pcs.html
@@ -497,11 +497,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Damak-6, Thanaroad <br>
+              Koshi Province 35357<br>
+              Jhapa, Nepal <br>
+              <strong>Phone:</strong> +977 23 571638<br>
+              <strong>Email:</strong> vmacacc@gmail.com<br>
             </p>
 
             <div class="social-links">
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
