--- a/pcs.html
+++ b/pcs.html
@@ -206,10 +206,12 @@
 </td>
 <td style="width:220px;">
   <table>
-      <td><div class="container"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
+    <div class="container">
+      <td><div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
       <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
       <td><div <p id="total-price">Total: $0</p></td><tr>
       <td><div id="cart-items"></div></td><tr>
+    </div>
   </table>
 </td>
 </table>
@@ -560,6 +562,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
