--- a/pcs.html
+++ b/pcs.html
@@ -206,11 +206,12 @@
 </td>
 <td style="width:220px;">
   <table>
-    <div class="container">
-      <td><div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button></div></td></tr>
+      <div class="container" data-aos="fade-up">
+      <div class="products" style="margin-top:100px;"><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></td><tr>
       <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
-      <td><div <p id="total-price">Total: $0</p></td><tr>
-      <td><div id="cart-items"></div></td><tr>
+      <td><div <p id="total-price">Total: $0</p></div></td><tr>
+      <td><div id="cart-items"></div> </td><tr>
+      </div>
     </div>
   </table>
 </td>
@@ -562,6 +563,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
