--- a/pcs.html
+++ b/pcs.html
@@ -204,16 +204,14 @@
   </div>
 </div>
 </td>
-<td style="width:220px;">
-  <table>
-      <div class="container" data-aos="fade-up">
-      <div class="products" style="margin-top:100px;"><td><button onclick="openModal()" style="background:#f44336;">Place Order</button></td><tr>
-      <td><div class="cart"><h6>Your Cart</h6></div></td><tr>
-      <td><div <p id="total-price">Total: $0</p></div></td><tr>
-      <td><div id="cart-items"></div> </td><tr>
+<td>
+  <div class="container" data-aos="fade-up">
+      <div class="products" style="margin-top:100px;"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
+      <div class="cart"><h6>Your Cart</h6></div>
+      <div <p id="total-price">Total: $0</p></div>
+      <div id="cart-items"></div>
       </div>
     </div>
-  </table>
 </td>
 </table>
 
@@ -563,6 +561,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
