--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,7 @@
 
     </div>
   </header><!-- End Header -->
-<table style="boarder:2px;"><td>
+<table style="border: 1px solid black;"><td>
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -561,6 +561,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
