--- a/pcs.html
+++ b/pcs.html
@@ -144,7 +144,8 @@
 
     </div>
   </header><!-- End Header -->
-<table style="border: 1px solid black;" position: "relative; top: 920px;"><td style="border: 1px solid black;">
+
+<table style="border: 1px solid black; position: absolute; top: 920px;"><td style="border: 1px solid black;">
 <div class="container" data-aos="fade-up">  
 <div class="products" style="margin-top:100px;">
     <div class="product">
@@ -561,6 +562,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
