--- a/pcs.html
+++ b/pcs.html
@@ -147,7 +147,7 @@
 
 <table style="border: 1px solid black; position: relative; top: 100px;"><td style="border: 1px solid black;">
 <div class="container" data-aos="fade-up">  
-<div class="products" style="margin-top:100px;">
+<div class="products">
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -207,7 +207,7 @@
 </td>
 <td>
   <div class="container" data-aos="fade-up">
-      <div class="products" style="vertical-align: top;"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
+      <div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
       <div class="cart"><h6>Your Cart</h6></div>
       <div <p id="total-price">Total: $0</p></div>
       <div id="cart-items"></div>
@@ -562,6 +562,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
