--- a/pcs.html
+++ b/pcs.html
@@ -207,7 +207,7 @@
 </td>
 <td>
   <div class="container" data-aos="fade-up">
-      <div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
+      <div class="products" style="vertical-align: top;"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
       <div class="cart"><h6>Your Cart</h6></div>
       <div <p id="total-price">Total: $0</p></div>
       <div id="cart-items"></div>
@@ -562,6 +562,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
