--- a/pcs.html
+++ b/pcs.html
@@ -146,8 +146,7 @@
   </header><!-- End Header -->
 
 <table style="border: 1px solid black; position: relative; top: 100px;"><td style="border: 1px solid black;">
-<div class="container" data-aos="fade-up">  
-<div class="products">
+<td><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -203,11 +202,10 @@
         <button onclick="addToCart('Dell Pro Max Micro Desktop', 1100)">Add to Cart</button>
     </div>
   </div>
-</div>
 </td>
-<td>
+<td style="vertical-align: top;">
   <div class="container" data-aos="fade-up">
-      <div class="products" style="vertical-align: top;"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
+      <div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
       <div class="cart"><h6>Your Cart</h6></div>
       <div <p id="total-price">Total: $0</p></div>
       <div id="cart-items"></div>
@@ -562,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
