--- a/pcs.html
+++ b/pcs.html
@@ -203,8 +203,8 @@
     </div>
   </div>
 </td>
-<td style="vertical-align: top;">
-  <div class="container" data-aos="fade-up">
+<td>
+  <div class="container" data-aos="fade-up" style="vertical-align: top;">
       <div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
       <div class="cart"><h6>Your Cart</h6></div>
       <div <p id="total-price">Total: $0</p></div>
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
