--- a/pcs.html
+++ b/pcs.html
@@ -145,8 +145,8 @@
     </div>
   </header><!-- End Header -->
 
-<table style="border: 1px solid black; position: relative; top: 100px;"><td style="border: 1px solid black;">
-<td><div class="container" data-aos="fade-up">  
+<table><td style="border: 1px solid black;">
+<td style="border: 1px solid black; position: relative; top: 100px;"><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -203,7 +203,7 @@
     </div>
   </div>
 </td>
-<td>
+<td style="border: 1px solid black; position: relative; top: 100px;">
   <div class="container" data-aos="fade-up" style="vertical-align: top;">
       <div class="products"><button onclick="openModal()" style="background:#f44336;">Place Order</button>
       <div class="cart"><h6>Your Cart</h6></div>
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
