--- a/pcs.html
+++ b/pcs.html
@@ -145,7 +145,7 @@
     </div>
   </header><!-- End Header -->
 
-<table><td style="border: 1px solid black;">
+<table>
 <td style="border: 1px solid black; position: relative; top: 100px;"><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
