--- a/pcs.html
+++ b/pcs.html
@@ -146,7 +146,7 @@
   </header><!-- End Header -->
 
 <table style="border: 1px solid black; position: relative; top: 100px;">
-<td><div class="container" data-aos="fade-up">  
+<td style="border: 1px solid black;"><div class="container" data-aos="fade-up">  
     <div class="product">
       <img src="assets/img/optiplex-3000tc-gallery-3.avif" width="80px">
         <h6>Dell OptiPlex Desktop</h6>
@@ -560,6 +560,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
